@@ -37,6 +37,9 @@ import it.eng.idra.dcat.dump.DcatApSerializer;
 import it.eng.idra.utils.CommonUtil;
 import it.eng.idra.utils.PropertyManager;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -61,7 +64,7 @@ public class OdmsManager {
 
   /** The ODMS connectors list. */
   private static HashMap<OdmsCatalogueType, String> ODMSConnectorsList = new HashMap<OdmsCatalogueType, String>();
-
+  
   /** The get nodes lock. */
   private static boolean getNodesLock = false;
   // private static PersistenceManager jpa;
@@ -350,13 +353,13 @@ public class OdmsManager {
   public static boolean hasDuplicateZenodoCommunity(List<OdmsCatalogue> nodes, OdmsCatalogue newNode) {
     return "ZENODO".equalsIgnoreCase(newNode.getNodeType().toString())
         && newNode.getCommunities() != null
-        && !newNode.getCommunities().isBlank()
+        && !newNode.getCommunities().trim().isEmpty()
         && nodes.stream()
             .filter(n -> "ZENODO".equalsIgnoreCase(n.getNodeType().toString()))
             .map(OdmsCatalogue::getCommunities)
             .anyMatch(c -> c != null && c.equalsIgnoreCase(newNode.getCommunities()));
   }
-
+  
   /**
    * Adds a federated ODMS node to the Federation Sends a request to CKAN node to
    * retrieve the datasets count Updates the dataset count of the node Forwards
@@ -384,7 +387,7 @@ public class OdmsManager {
     int assignedNodeId;
     int datasetsCount = 0;
 
-    if (!federatedNodes.contains(node) || !hasDuplicateZenodoCommunity(federatedNodes, node)) {
+    if (!federatedNodes.contains(node) || !hasDuplicateZenodoCommunity(federatedNodes, node) || node.getNodeType().equals(OdmsCatalogueType.DCATDUMP)) {
       PersistenceManager jpa = new PersistenceManager();
 
       try {
@@ -421,8 +424,18 @@ public class OdmsManager {
           /*
            * Persist the node and return the ID assigned by the Entity Manager
            */
+          logger.info("nodetype" + node.getNodeType());
+          logger.info(node.getNodeType().equals(OdmsCatalogueType.DCATDUMP));
+          
+           logger.info("Persist the node and return the ID assigned by the Entity Manager");
+           if(node.getNodeType().equals(OdmsCatalogueType.DCATDUMP) ){
+          node.setHost(createUniqueString(node));
+          logger.info(node.getHost());
+        }
           assignedNodeId = jpa.jpaInsertOdmsCatalogue(node);
           node.setId(assignedNodeId);
+        
+         
 
           /*
            * Unlock the Get nodes and add the persisted Node in the global Federated Nodes
@@ -465,7 +478,7 @@ public class OdmsManager {
               }
 
             }
-
+            
             updateNode = true;
           } else if (node.getNodeType().equals(OdmsCatalogueType.ORION)) {
 
@@ -526,6 +539,36 @@ public class OdmsManager {
     }
 
   }
+
+  public static String createUniqueString(OdmsCatalogue node) {
+        String raw =  node.getNodeType() + "-" + node.getName() + "-" + node.getRegisterDate() + "-" + node.getPublisherName();
+        return hashString(raw);
+    }
+
+    private static String hashString(String input) {
+        try {
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            byte[] encodedHash = digest.digest(input.getBytes(StandardCharsets.UTF_8));
+
+            // Converti in esadecimale
+            StringBuilder hexString = new StringBuilder();
+            for (byte b : encodedHash) {
+                String hex = Integer.toHexString(0xff & b);
+                if (hex.length() == 1)
+                    hexString.append('0');
+                hexString.append(hex);
+            }
+            return hexString.toString();
+
+        } catch (NoSuchAlgorithmException e) {
+            throw new RuntimeException("SHA-256 not available", e);
+        }
+    }
+
+
+
+  
+  
 
   /**
    * Gets the inactive ODMS catalogue.
@@ -641,26 +684,30 @@ public class OdmsManager {
    * @returns void
    */
   public static void updateOdmsCatalogue(OdmsCatalogue node, boolean persist)
-      throws OdmsCatalogueNotFoundException, OdmsManagerException {
 
-    if (federatedNodes.remove(node)) {
-      if (persist) {
-        PersistenceManager jpa = new PersistenceManager();
-        try {
-          jpa.jpaUpdateOdmsCatalogue(node);
-        } catch (Exception e) {
-          throw new OdmsManagerException(
-              "There " + "was an error while updating the ODMS Node: " + e.getMessage());
-        } finally {
-          jpa.jpaClose();
+    throws OdmsCatalogueNotFoundException, OdmsManagerException {
+      try {
+        if (federatedNodes.remove(node)) {
+          if (persist) {
+            PersistenceManager jpa = new PersistenceManager();
+            try {
+              jpa.jpaUpdateOdmsCatalogue(node);
+            } catch (Exception e) {
+              throw new OdmsManagerException(
+                  "There " + "was an error while updating the ODMS Node: " + e.getMessage());
+            } finally {
+              jpa.jpaClose();
+            }
+          }
+          federatedNodes.add(node);
+
+        } else {
+          throw new OdmsCatalogueNotFoundException("The ODMS node does not exist!");
         }
-      }
-      federatedNodes.add(node);
-
-    } else {
-      throw new OdmsCatalogueNotFoundException("The ODMS node does not exist!");
-    }
-
+      } catch (Exception e) {
+        throw new OdmsManagerException(
+            "There " + "was an error while updating the ODMS Node: " + e.getMessage());
+      } 
   }
 
   /**
